added bash version<4 support

--- a/.nanorc
+++ b/.nanorc
@@ -8,26 +8,26 @@ set historylog
 set speller hunspell
 set quickblank
 set nowrap
-include "/usr/share/nano/cfg.nanorc"
-include "/usr/share/nano/c.nanorc"
-include "/usr/share/nano/css.nanorc"
-include "/usr/share/nano/default.nanorc"
-include "/usr/share/nano/html.nanorc"
-include "/usr/share/nano/java.nanorc"
-include "/usr/share/nano/js.nanorc"
-include "/usr/share/nano/makefile.nanorc"
-include "/usr/share/nano/man.nanorc"
-#include "/usr/share/nano/nanorc.nanorc"
-include "/usr/share/nano/nanorc.alt.nanorc"
-include "/usr/share/nano/patch.nanorc"
-include "/usr/share/nano/perl.nanorc"
-include "/usr/share/nano/pov.nanorc"
-include "/usr/share/nano/python.nanorc"
-include "/usr/share/nano/ruby.nanorc"
-#include "/usr/share/nano/sh.nanorc" 
-include "/usr/share/nano/sh.alt.nanorc"
-include "/usr/share/nano/tex.nanorc"
-#include "/usr/share/nano/asm.nanorc"
-#include "/usr/share/nano/groff.nanorc"
-#include "/usr/share/nano/mutt.nanorc"
-#include "/usr/share/nano/moinmoin.nanorc"
+include "~/.nano/cfg.nanorc"
+include "~/.nano/c.nanorc"
+include "~/.nano/css.nanorc"
+include "~/.nano/default.nanorc"
+include "~/.nano/html.nanorc"
+include "~/.nano/java.nanorc"
+include "~/.nano/js.nanorc"
+include "~/.nano/makefile.nanorc"
+include "~/.nano/man.nanorc"
+#include "~/.nano/nanorc.nanorc"
+include "~/.nano/nanorc.alt.nanorc"
+include "~/.nano/patch.nanorc"
+include "~/.nano/perl.nanorc"
+include "~/.nano/pov.nanorc"
+include "~/.nano/python.nanorc"
+include "~/.nano/ruby.nanorc"
+#include "~/.nano/sh.nanorc" 
+include "~/.nano/sh.alt.nanorc"
+include "~/.nano/tex.nanorc"
+#include "~/.nano/asm.nanorc"
+#include "~/.nano/groff.nanorc"
+#include "~/.nano/mutt.nanorc"
+#include "~/.nano/moinmoin.nanorc"
