--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -4,11 +4,14 @@
 RIGHT seek +10
 LEFT seek -10
 
-MOUSE_BTN0_DBL vo_fullscreen
-KP8 audio_delay 0.500
-KP2 audio_delay -0.500
-KP6 audio_delay 0.010
-KP4 audio_delay -0.010
+Alt++ add volume-max 50
+Alt+- add volume-max -50
+
+MOUSE_BTN0_DBL cycle fullscreen
+KP8 add audio-delay 0.500
+KP2 add audio-delay -0.500
+KP6 add audio-delay 0.010
+KP4 add audio-delay -0.010
 
 # mouse wheel
 AXIS_UP    add volume 2
