mpv-configs verbessern

--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -20,6 +20,11 @@ AXIS_LEFT  add volume 2
 AXIS_RIGHT add volume -2
 MOUSE_BTN3 add volume 2
 MOUSE_BTN4 add volume -2
+Ctrl+MOUSE_BTN3 seek 10
+Ctrl+MOUSE_BTN4 seek -10
 
+S add sharpen 0.1
+Ctrl+s add sharpen -0.1
+Ctrl+S add sharpen -0.1
 
 F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
