--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
 	undo = reset --hard HEAD
 	stash-all = stash save --include-untracked
 	glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+	sync = "!ssh-add -l > /dev/null || ssh-add; git pull && git push"
 [merge]
 	conflictstyle = diff3
 	tool = meld
