--- a/.gitconfig
+++ b/.gitconfig
@@ -28,3 +28,7 @@
 	fsckobjects = true
 [fetch]
 	fsckobjects = false
+[init]
+	templatedir = ~/.git_template
+[url "git@github.com:"]
+	insteadOf = https://github.com/
