--- a/mpv/config
+++ b/mpv/config
@@ -20,7 +20,8 @@ autosync=30
 #framedrop=decoder+vo # For slow machines
 hwdec=vaapi-copy	 	 # Hardware-acceleration for intel gpu
 vd-lavc-threads=3
-vo=opengl-hq
+#vo=opengl-hq
+vo=gpu
 
 # Limit youtube-dl to max resolution of 1080p
 ytdl-format='bestvideo[height<=?1080]+bestaudio/best[height<=?1080]'
