--- a/.gitconfig
+++ b/.gitconfig
@@ -32,3 +32,6 @@
 	templatedir = ~/.git_template
 [url "git@github.com:"]
 	insteadOf = https://github.com/
+[pager]
+   diff = diff-so-fancy | less --tabs=1,5 -RFX
+   show = diff-so-fancy | less --tabs=1,5 -RFX
