--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -27,4 +27,7 @@ S add sharpen 0.1
 Ctrl+s add sharpen -0.1
 Ctrl+S add sharpen -0.1
 
+
+N af toggle ladspa=rnnoise:noise_suppressor
+
 F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
