--- a/mpv/.mpv/input.conf
+++ b/mpv/.mpv/input.conf
@@ -29,5 +29,6 @@ Ctrl+S add sharpen -0.1
 
 
 N af toggle ladspa=rnnoise:noise_suppressor
+A cycle_values audio-device pulse/alsa_output.usb-Sennheiser_Communications_Sennheiser_USB_headset-00.analog-stereo pulse/alsa_output.pci-0000_00_1b.0.analog-stereo   pulse/alsa_output.pci-0000_04_00.0.analog-surround-51
 
 F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
