--- a/mutt/.muttrc
+++ b/mutt/.muttrc
@@ -44,8 +44,11 @@ set index_format = "%Z %{%b %d}  %-15.15L  (%4c)  %s"
 # better but works only with neomutt:
 #set index_format = "%Z %<[y?%<[m?%<[d?%[%H:%M ]&%[%a %d]>&%[%b %d]>&%[%m/%y ]>  %-20.20L  (%4c)  %s"
 
-bind generic p noop
+set wait_key = no
+bind index p search-opposite
+macro index \" "|mbsync main:INBOX\n<sync-mailbox>"
 macro index § "|mbsync -a\n<sync-mailbox>"
+macro index % "|listadmin\n<sync-mailbox>"
 
 source ~/.mutt/sidebar
 
