--- a/mpv/.mpv/input.conf
+++ b/mpv/.mpv/input.conf
@@ -1,6 +1,6 @@
 # Seek
-. seek +2
-, seek -2
+. seek +1.5
+, seek -1.5
 RIGHT seek +10
 LEFT seek -10
 
@@ -27,8 +27,19 @@ S add sharpen 0.1
 Ctrl+s add sharpen -0.1
 Ctrl+S add sharpen -0.1
 
-
+# Toggle RNNoise suppressor
 N af toggle ladspa=rnnoise:noise_suppressor
+
+# Cycle through the audio devices
 A cycle_values audio-device pulse/alsa_output.usb-Sennheiser_Communications_Sennheiser_USB_headset-00.analog-stereo pulse/alsa_output.pci-0000_00_1b.0.analog-stereo   pulse/alsa_output.pci-0000_04_00.0.analog-surround-51
 
+# Cycle through video-aspects
 F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
+
+# Toggle Anime upscale filter
+CTRL+A change-list glsl-shaders toggle "~~/shaders/Anime4K_Adaptive.glsl"
+# Show shaders
+#CTRL+1 show-text "Shaders: ${glsl-shaders}"
+
+
+CTRL+C ignore
