--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,11 @@ set -g history-limit 100000
 # change pane numbers to start with 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
+# No delays
+set -s escape-time 1
+
+# Reload the file with trigger+r
+bind r source-file ~/.tmux.conf \; display "tmux config reloaded :)"
 
 # vimlike keybindings for navigation between splits
 bind j select-pane -D
@@ -14,9 +19,10 @@ bind k select-pane -U
 bind h select-pane -L
 bind l select-pane -R
 
-# split windows
-bind | split-window -h
-bind - split-window -v
+# split windows and new planes should keep pwd
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window      -c "#{pane_current_path}"
 
 # keybindings to change the size of splits
 bind -r J resize-pane -D 5
@@ -24,11 +30,19 @@ bind -r K resize-pane -U 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-set -g pane-border-fg white
-set -g pane-active-border-fg cyan
-set -g pane-active-border-bg cyan
+set -g pane-border-style fg=white
+set -g pane-active-border-style fg=cyan
+set -g pane-active-border-style bg=cyan
+
+# Right status
+set -g status-right " #{cpu_percentage} #{cpu_icon} #{prefix_highlight}#{?window_zoomed_flag,🔍,} #[fg=black] #(tmux ls | wc -l) | #{host} | %F %H:%M"
+
+# Use shift + arrow key to move between windows in a session
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 setw -g mouse on
+set-option -g mouse on
 
 # Enable vilike copy and paste
 bind P paste-buffer
@@ -36,3 +50,17 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 #bind -T copy-mode-vi y copy-pipe "xclip -sel clip -i"
+
+set -g @sidebar-tree-command 'tree -C'
+
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
