--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set -g history-limit 100000
 set -g base-index 1
 set -g pane-base-index 1
 # No delays
-set -s escape-time 1
+set -s escape-time 0
 
 # Reload the file with trigger+r
 bind r source-file ~/.tmux.conf \; display "tmux config reloaded :)"
@@ -30,17 +30,19 @@ bind -r K resize-pane -U 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
+# set nicer colors
 set -g pane-border-style fg=white
 set -g pane-active-border-style fg=cyan
 set -g pane-active-border-style bg=cyan
 
 # Right status
-set -g status-right " #{cpu_percentage} #{cpu_icon} #{prefix_highlight}#{?window_zoomed_flag,🔍,} #[fg=black] #(tmux ls | wc -l) | #{host} | %F %H:%M"
+set -g status-right "#{prefix_highlight}#{cpu_percentage} #{cpu_icon} #{?window_zoomed_flag,🔍,} #[fg=black] #(tmux ls | wc -l) | #{host} | %F %H:%M"
 
 # Use shift + arrow key to move between windows in a session
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Enable mouse
 setw -g mouse on
 set-option -g mouse on
 
@@ -49,10 +51,14 @@ bind P paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-#bind -T copy-mode-vi y copy-pipe "xclip -sel clip -i"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
+# For some reason this doesn't work as expected -> in bashrc
+set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
+set-environment 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
+
+# Plugins and their configurations
 set -g @sidebar-tree-command 'tree -C'
-
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
 set -g @plugin 'tmux-plugins/tmux-cpu'
@@ -61,6 +67,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'laktak/extrakto'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
