--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ bold_italic_font Hasklig Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -754,7 +754,7 @@ map ctrl+shift+alt+enter new_window @ bash -c "echo Warning! Kitty Remote Contro
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
 
-map kitty_mod+f kitten hints --type path --program -
+#map kitty_mod+f kitten hints --type path --program -
 # map kitty_mod+p>f kitten hints --type path --program -
 
 #: Select a path/filename and insert it into the terminal. Useful, for
@@ -837,4 +837,9 @@ map kitty_mod+f kitten hints --type path --program -
 
 #: }}}
 
+# kitty-grab kitten
+map Alt+Escape kitten kitty_grab/grab.py
+# search kitten
+map kitty_mod+/      launch --allow-remote-control kitty +kitten search.py @active-kitty-window-id
+# 
 # }}}
