--- a/mpv/.mpv/input.conf
+++ b/mpv/.mpv/input.conf
@@ -37,7 +37,7 @@ A cycle_values audio-device pulse/alsa_output.usb-Sennheiser_Communications_Senn
 F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
 
 # Toggle Anime upscale filter
-CTRL+A change-list glsl-shaders toggle "~~/shaders/Anime4K_Adaptive.glsl"
+#CTRL+A change-list glsl-shaders toggle "~~/shaders/Anime4K_Adaptive.glsl"
 # Show shaders
 #CTRL+1 show-text "Shaders: ${glsl-shaders}"
 
