New aliases, plugins and settings

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -24,6 +24,8 @@
    stash-all = stash save --include-untracked
    glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
    sync = "!ssh-add -l > /dev/null || ssh-add; git pull && git push"
+   hide = update-index --assume-unchanged
+   unhide = update-index --no-assume-unchanged
    a = add
    ap = add -p
    c = commit --verbose
@@ -38,6 +40,8 @@
    b = "!git for-each-ref --sort='-authordate' --format='%(authordate)%09%(objectname:short)%09%(refname)' refs/heads | sed -e 's-refs/heads/--'"
    # list aliases
    la = "!git config -l | grep alias | cut -c 7-"
+   # list recently used branches
+   lb = !git reflog show --pretty=format:'%gs ~ %gd' --date=relative | grep 'checkout:' | grep -oE '[^ ]+ ~ .*' | awk -F~ '!seen[$1]++' | head -n 10 | awk -F' ~ HEAD@{' '{printf(\"  \\033[33m%s: \\033[37m %s\\033[0m\\n\", substr($2, 1, length($2)-1), $1)}'
 [giggle]
    main-window-maximized = false
    main-window-geometry = 950x697+0+256
