--- a/mpv/.mpv/input.conf
+++ b/mpv/.mpv/input.conf
@@ -28,7 +28,7 @@ Ctrl+s add sharpen -0.1
 Ctrl+S add sharpen -0.1
 
 # Toggle RNNoise suppressor
-N af toggle ladspa=rnnoise:noise_suppressor
+N af toggle lavfi="ladspa=rnnoise:noise_suppressor"
 
 # Cycle through the audio devices
 A cycle_values audio-device pulse/alsa_output.usb-Sennheiser_Communications_Sennheiser_USB_headset-00.analog-stereo pulse/alsa_output.pci-0000_00_1b.0.analog-stereo   pulse/alsa_output.pci-0000_04_00.0.analog-surround-51
