--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # enable screenlike C-a as alternative prefix
 set-option -g prefix2 C-a
 # Enable colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'tmux'
 # increase history size
 set -g history-limit 100000
 # change pane numbers to start with 1 instead of 0
@@ -55,7 +55,6 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i
 
 # For some reason this doesn't work as expected -> in bashrc
 set-environment -g 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
-set-environment 'SSH_AUTH_SOCK' ~/.ssh/ssh_auth_sock
 
 # Plugins and their configurations
 set -g @sidebar-tree-command 'tree -C'
