--- a/mpv/.mpv/config
+++ b/mpv/.mpv/config
@@ -23,7 +23,7 @@ volume=80
 
 ### Video ###
 #framedrop=decoder+vo # For slow machines
-hwdec=vaapi-copy	 	 # Hardware-acceleration for intel gpu
+hwdec=auto-safe
 vd-lavc-threads=3
 #vo=opengl-hq
 
