--- a/mpv/.mpv/input.conf
+++ b/mpv/.mpv/input.conf
@@ -4,8 +4,8 @@
 RIGHT seek +10
 LEFT seek -10
 
-Alt++ add volume-max 50
-Alt+- add volume-max -50
+#Alt++ add volume-max 50
+#Alt+- add volume-max -50
 
 MOUSE_BTN0_DBL cycle fullscreen
 KP8 add audio-delay 0.500
@@ -40,3 +40,4 @@ F2 cycle_values video-aspect "16:9" "16:10" "4:3" "2.35:1" "-1"
 
 CTRL+C ignore
 
+b script-message-to blur_edges toggle-blur
