--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,6 +23,7 @@
    undo = reset --hard HEAD
    stash-all = stash save --include-untracked
    glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+   alog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --all
    sync = "!ssh-add -l > /dev/null || ssh-add; git pull && git push"
    hide = update-index --assume-unchanged
    unhide = update-index --no-assume-unchanged
