--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -128,7 +128,7 @@ scrollback_lines 100000
 #: special value default means to use the operating system's default
 #: URL handler.
 
-# copy_on_select no
+copy_on_select no
 
 #: Copy to clipboard on select. With this enabled, simply selecting
 #: text with the mouse will cause the text to be copied to clipboard.
@@ -223,8 +223,8 @@ visual_bell_duration 0.01
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  1024
-initial_window_height 700
+initial_window_width  1100
+initial_window_height 1005
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -233,14 +233,23 @@ initial_window_height 700
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts Fat,Tall,Grid,Horizontal,Vertical,Stack
-map kitty_mod+z goto_layout stack
-map kitty_mod+p last_used_layout
+enabled_layouts Fat,Vertical,Tall,splits,stack
+map kitty+z goto_layout stack
+map kitty+p last_used_layout
+map F9 launch --location=hsplit
+map F10 launch --location=vsplit
+map F11 layout_action rotate
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value * means all layouts. The first listed layout will
 #: be used as the startup layout. For a list of available layouts, see
 #: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
+
+map kitty+left resize_window narrower
+map kitty+right resize_window wider
+map kitty+up resize_window taller 1
+map kitty+down resize_window shorter 1
+
 
 # window_resize_step_cells 2
 # window_resize_step_lines 2
@@ -292,7 +301,7 @@ map kitty_mod+p last_used_layout
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.9
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -433,7 +442,7 @@ background_opacity         0.95
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
-# editor .
+editor nvim
 
 #: The console editor to use when editing the kitty config file or
 #: similar tasks. A value of . means to use the environment variable
@@ -441,7 +450,7 @@ background_opacity         0.95
 #: in your shell startup scripts but system-wide, otherwise kitty will
 #: not see it.
 
-# close_on_child_death no
+close_on_child_death yes
 
 #: Close the window when the child process (shell) exits. If no (the
 #: default), the terminal will remain open when the child exits as
@@ -589,8 +598,9 @@ background_opacity         0.95
 
 
 # Map ctrl+plus/minus to fontsize change
-map ctrl+RIGHT_BRACKET change_font_size all +1 
+map ctrl+Plus change_font_size all +1
 map ctrl+Minus change_font_size all -1 
+map kitty_mod+Minus noop
 
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
@@ -754,7 +764,7 @@ map ctrl+shift+alt+enter new_window @ bash -c "echo Warning! Kitty Remote Contro
 #: Open a currently visible URL using the keyboard. The program used
 #: to open the URL is specified in open_url_with.
 
-#map kitty_mod+f kitten hints --type path --program -
+map kitty_mod+f kitten hints --type path --program -
 # map kitty_mod+p>f kitten hints --type path --program -
 
 #: Select a path/filename and insert it into the terminal. Useful, for
@@ -843,3 +853,16 @@ map Alt+Escape kitten kitty_grab/grab.py
 map kitty_mod+/      launch --allow-remote-control kitty +kitten search.py @active-kitty-window-id
 # 
 # }}}
+
+
+
+# map f1 toggle_marker regex 1 ^\[.*\]\$\s
+# map f2 toggle_marker regex 2 \x1b\[32mtest
+# map f3 create_marker
+
+map f4 toggle_marker function /home/michi/test.py
+
+map kitty_mod+p scroll_to_mark prev
+map kitty_mod+n scroll_to_mark next
+
+
