Add shortcuts for navigating between kitty windows

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -233,12 +233,23 @@ initial_window_height 1005
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts Fat,Vertical,Tall,splits,stack
+enabled_layouts Vertical,Fat,Tall,splits,stack
 map kitty+z goto_layout stack
 map kitty+p last_used_layout
 map F9 launch --location=hsplit
 map F10 launch --location=vsplit
 map F11 layout_action rotate
+map kitty_mod+F11 layout_action rotate
+
+map shift+up move_window up
+map shift+left move_window left
+map shift+right move_window right
+map shift+down move_window down
+
+map alt+left neighboring_window left
+map alt+right neighboring_window right
+map alt+up neighboring_window up
+map alt+down neighboring_window down
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value * means all layouts. The first listed layout will
