Tweak opacity for better readability

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -312,7 +312,7 @@ map kitty+down resize_window shorter 1
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-inactive_text_alpha 0.9
+inactive_text_alpha 0.85
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -367,7 +367,7 @@ active_tab_font_style   bold
 
 #: The foreground and background colors
 
-background_opacity         0.95
+#background_opacity         0.985
 # dynamic_background_opacity no
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
