--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -233,7 +233,12 @@ initial_window_height 1005
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
+#: The enabled window layouts. A comma separated list of layout names.
+#: The special value * means all layouts. The first listed layout will
+#: be used as the startup layout. For a list of available layouts, see
+#: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
 enabled_layouts Vertical,Fat,Tall,splits,stack
+
 map kitty+z goto_layout stack
 map kitty+p last_used_layout
 map F9 launch --location=hsplit
@@ -471,7 +476,7 @@ close_on_child_death yes
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-#allow_remote_control yes
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -876,4 +881,9 @@ map f4 toggle_marker function /home/michi/test.py
 map kitty_mod+p scroll_to_mark prev
 map kitty_mod+n scroll_to_mark next
 
+map kitty_mod+y>w kitten extrakto_kitty.py --words
+map kitty_mod+y>p kitten extrakto_kitty.py --paths
+map kitty_mod+y>u kitten extrakto_kitty.py --urls
+map kitty_mod+y>l kitten extrakto_kitty.py --lines
 
+map kitty_mod+7      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
