Add vim-kitty navigation tooling

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -251,15 +251,15 @@ map shift+left move_window left
 map shift+right move_window right
 map shift+down move_window down
 
-map alt+left neighboring_window left
-map alt+right neighboring_window right
-map alt+up neighboring_window up
-map alt+down neighboring_window down
+# map alt+left neighboring_window left
+# map alt+right neighboring_window right
+# map alt+up neighboring_window up
+# map alt+down neighboring_window down
 
-#: The enabled window layouts. A comma separated list of layout names.
-#: The special value * means all layouts. The first listed layout will
-#: be used as the startup layout. For a list of available layouts, see
-#: the https://sw.kovidgoyal.net/kitty/index.html#layouts.
+map alt+down kitten pass_keys.py neighboring_window bottom alt+down
+map alt+up kitten pass_keys.py neighboring_window top      alt+up
+map alt+left kitten pass_keys.py neighboring_window left   alt+left
+map alt+l kitten pass_keys.py neighboring_window right     alt+right
 
 map kitty+left resize_window narrower
 map kitty+right resize_window wider
