Improve tmux plugin and local conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,5 +68,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'laktak/extrakto'
 
+# Allow local customization in ~/.tmux_local.conf
+if-shell "[ -f ~/.tmux_local.conf ]" 'source ~/.tmux_local.conf'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
