--- a/readline/.inputrc
+++ b/readline/.inputrc
@@ -30,7 +30,9 @@ set revert-all-at-newline on
 "\e[Z": menu-complete
 
 Control-o: "\C-e > output.txt"
-Control-s: "\C-a$(\C-e)\C-a"
+
+# Macht immer wieder Probleme…
+Control-v: '\C-a$(\C-e)\C-a'
 
 Control-n: "\C-creset\r\C-l"
 
