Update kitty conf

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -787,25 +787,29 @@ map kitty_mod+f kitten hints --type path --program -
 #: instance to run git commands on a filename output from a previous
 #: git command.
 
-# map kitty_mod+p>shift+f kitten hints --type path
+map kitty_mod+p>f kitten hints --type path --program -
 
 #: Select a path/filename and open it with the default open program.
 
-# map kitty_mod+p>l kitten hints --type line --program -
+map kitty_mod+p>l kitten hints --type line --program -
 
 #: Select a line of text and insert it into the terminal. Use for the
 #: output of things like: ls -1
 
-# map kitty_mod+p>w kitten hints --type word --program -
+map kitty_mod+p>w kitten hints --type word --program -
 
 #: Select words and insert into terminal.
 
-# map kitty_mod+p>h kitten hints --type hash --program -
+map kitty_mod+p>h kitten hints --type hash --program -
 
 #: Select something that looks like a hash and insert it into the
 #: terminal. Useful with git, which uses sha1 hashes to identify
 #: commits
 
+#map kitty_mod+p>n kitten hints --type linenum --program -
+map ctrl+shift+p>n kitten hints --type linenum
+
+map kitty_mod+i combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
 
 #: The hints kitten has many more modes of operation that you can map
 #: to different shortcuts. For a full description see kittens/hints.
@@ -878,8 +882,8 @@ map kitty_mod+/      launch --allow-remote-control kitty +kitten search.py @acti
 
 map f4 toggle_marker function /home/michi/test.py
 
-map kitty_mod+p scroll_to_mark prev
-map kitty_mod+n scroll_to_mark next
+#map kitty_mod+p scroll_to_mark prev
+#map kitty_mod+n scroll_to_mark next
 
 map kitty_mod+y>w kitten extrakto_kitty.py --words
 map kitty_mod+y>p kitten extrakto_kitty.py --paths
@@ -887,3 +891,9 @@ map kitty_mod+y>u kitten extrakto_kitty.py --urls
 map kitty_mod+y>l kitten extrakto_kitty.py --lines
 
 map kitty_mod+7      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
+
+
+#map ctrl+shift+y scroll_to_prompt -1
+#map ctrl+shift+x scroll_to_prompt 1
+map ctrl+shift+ö scroll_to_prompt -1
+map ctrl+shift+ä scroll_to_prompt 1
