--- a/solaar/.config/solaar/rules.yaml
+++ b/solaar/.config/solaar/rules.yaml
@@ -1,7 +1,22 @@
 %YAML 1.3
 ---
+- Process: anki
+- Key: [Back Button, pressed]
+- KeyPress: '2'
+...
+---
+- Process: anki
+- Key: [Forward Button, pressed]
+- KeyPress: '4'
+...
+---
 - Key: [Lock PC, pressed]
 - Execute: systemctl suspend
+...
+---
+- Process: mpv
+- Key: [DPI Switch, pressed]
+- KeyPress: f
 ...
 ---
 - Key: [DPI Switch, pressed]
@@ -44,7 +59,7 @@
 ...
 ---
 - Key: [Host Switch Channel 2, pressed]
-- KeyPress: XF86_WWW
+- KeyPress: XF86_WLAN
 ...
 ---
 - Key: [Lock PC, pressed]
