Minor changes to kitty config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -261,8 +261,8 @@ map alt+up kitten pass_keys.py neighboring_window top      alt+up
 map alt+left kitten pass_keys.py neighboring_window left   alt+left
 map alt+l kitten pass_keys.py neighboring_window right     alt+right
 
-map kitty+left resize_window narrower
-map kitty+right resize_window wider
+map kitty+left resize_window narrower 1
+map kitty+right resize_window wider 1
 map kitty+up resize_window taller 1
 map kitty+down resize_window shorter 1
 
@@ -299,7 +299,7 @@ map kitty+down resize_window shorter 1
 #: visible. Negative values will cause the value of
 #: window_margin_width to be used instead.
 
-# window_padding_width 0.0
+window_padding_width 1.5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
@@ -620,6 +620,7 @@ map kitty_mod+Minus noop
 
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
+map ctrl+alt+enter new_window
 
 map ctrl+shift+alt+enter new_window @ bash -c "echo Warning! Kitty Remote Control active!; bash"
 
