--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -256,11 +256,15 @@ map shift+down move_window down
 # map alt+up neighboring_window up
 # map alt+down neighboring_window down
 
+# vim-kitty-naviagtor
+allow_remote_control yes
+listen_on unix:@mykitty
 map alt+down kitten pass_keys.py neighboring_window bottom alt+down
 map alt+up kitten pass_keys.py neighboring_window top      alt+up
 map alt+left kitten pass_keys.py neighboring_window left   alt+left
 map alt+l kitten pass_keys.py neighboring_window right     alt+right
 
+# Change size of windows
 map kitty+left resize_window narrower 1
 map kitty+right resize_window wider 1
 map kitty+up resize_window taller 1
